--- a/pages/docs/code_of_conduct.mdx
+++ b/pages/docs/code_of_conduct.mdx
@@ -2,62 +2,57 @@ import DocumentLayout from '@/components/docs/DocumentLayout'
 
 # Code of Conduct
 
-This code of conduct applies to all events and spaces sponsored by Sequoia Fabrica, including our physical locations, website, mailing lists, social media, and chat.
+This code of conduct applies to all events and spaces sponsored by Sequoia Fabrica (SF), including our physical locations, website, mailing lists, social media, and chat. 
 
-Some Sequoia Fabrica-sponsored spaces may have additional rules that participants must follow. Participants are responsible for knowing and abiding by these rules.
+Sequoia Fabrica is a space for tolerance and respect. We value robust discussion and encourage participants to engage with complex, challenging topics. We also ask members and visitors to be mindful of their words and actions and how they may affect others, including being open to feedback.
 
+We ask you to be aware that conversations or actions that may be appropriate within the context of a specific friendship or relationship with another member may be inappropriate in the Sequoia Fabrica space or in a group conversation with SF members or visitors you don't know well.
 
 ## Harassment
 
 The Sequoia Fabrica (SF) community is dedicated to providing a harassment-free experience for everyone. We do not tolerate harassment of participants in any form, including:
 
-
-
 - Offensive comments related to gender, gender identity, sexual orientation, disability, appearance, race, ethnicity, religion, etc.
-- Intimidation, stalking, doxxing
+- Intimidation, stalking, following
 - Disrupting events
 - Threats of violence
 - Encouraging self-harm
 - Continued communication after requests to stop
 - Physical contact without consent
 - Unwelcome sexual attention, unsolicited sexual images or content
+- Doxxing, maliciously revealing private information without consent
 - Deliberate misgendering and dead-naming
-- Deliberately revealing private information without consent, except as necessary to protect other community members from intentional abuse
 - Harassing photography or recording, including logging online activity for harassment purposes
-- Spamming, denial of service attacks, hacking personal devices or accounts without consent
-
+- Spamming, denial of service attacks, hacking of personal devices or accounts without consent
 
 ### The Sequoia Fabrica will not act on:
 
-
-
 - Reasonable communication of personal boundaries
+- Necessary measures to protect our community from serious, deliberate harm
 - Attempts to troll or undermine the code of conduct process
-
 
 ### Reporting 
 
-If you experience or notice harassment, or have other concerns, reach out to [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com).
-
+If you experience or witness harassment, reach out to sequoiafabrica@gmail.com. If you are in immediate danger, do not hesitate to enlist the help of those around you or call 911.
 
 ## Workshop Policies
-
-
 
 * Follow all safety procedures, as instructed by maintainers
 * Report unsafe conditions, broken equipment, and other incidents promptly
 * Keep the workspace clean and orderly 
 * Use tools and materials responsibly, as directed by maintainers
 
+## Enforcement
 
-## Consequences
+Members are empowered to ask anyone violating this code of conduct to cease the behavior and/or leave the space immediately. Further sanctions may be applied at the discretion of the Board.
 
-Members are empowered to warn or expel anyone violating this code of conduct. Further sanctions may be applied at the discretion of the Board.
-
-The Board may take any action they deem appropriate, including warning an offender, suspension of membership, temporary or permanent expulsion from our spaces and events without refund or notice.
+The Board may take any action they deem appropriate, including warning an offender, suspension of membership, temporary or permanent expulsion from Sequoia Fabrica spaces and events without refund or notice. 
 
 Contact the Board with any questions or concerns in person or at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com).
 
+This code of conduct draws from [Double Union](https://doubleunion.org/policies/#code-of-conduct), [Recurse Center](https://www.recurse.com/code-of-conduct), and [Hackers On Planet Earth](https://hope.net/codeofconduct.html). It is licensed under CC0, attribution is not required.
+
+Last updated: Jan 5, 2024
 
 export default function MDXPage({ children }) {
   return <DocumentLayout>{children}</DocumentLayout>;
