Add docs content

--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -1,6 +1,43 @@
 import DocumentLayout from '@/src/components/docs/DocumentLayout'
+import Callout from '@/src/components/Callout/Callout'
 
-# Membership
+# Membership at Sequoia Fabrica
+
+<Callout variant='warning'>
+  This page is incomplete and may not reflect the totality of the membership process. We are in the process of defining what membership will look like, and have prepared this document as preview for the sake of transparency. Please join our [mailing list](https://tinyletter.com/sequoiafabrica) to ensure you are updated when membership applications are ready.
+</Callout>
+
+# Join Our Community of Innovators and Creators
+At Sequoia Fabrica, we're not just a makerspace – we're a community. We offer a vibrant environment where creativity meets technology. Our members have access to a wide range of tools and ample space for  building your project.
+
+## Membership Types
+- **Standard Membership:** Our standard membership is open to all and is priced at **$100 per month**. Membership grants you 24/7 access to our facility and its equipment, as well as the opportunity to participate in the decision-making process at organizational meetings. Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with events. Our volunteer-based structure is how we are able to provide such an affordable space.
+
+- **Sponsored Membership**: Our sponsored membership is identical to the standard membership, and is available for those unable to afford the membership dues. There is no cost. Your type of membership is not public information.
+
+# What Membership Means
+- **Community Contribution:** Sequoia Fabrica thrives on the energy, creativity, and collaboration of its members. We believe that every member contributes to the fabric of our community, whether through sharing skills, participating in events, or volunteering for maintenance and improvements.
+
+- **Learning and Sharing:** More than just access to tools, Sequoia Fabrica is about learning and growing together. We encourage members to engage with each other, exchange knowledge, and collaborate on projects.
+
+- **Active Participation:** As a member, you are more than a user of the space; you are a caretaker of a shared resource and a participant in our collective governance. Your ideas and feedback are vital in shaping the future of Sequoia Fabrica.
+
+
+# Getting Started with Membership
+We've tried to make the process for membership as straightforward and transparent as possible. If you have any questions throughout the process, please [reach out to us](./contact).
+
+1. **Visit Us:** Get a feel for the space and meet fellow makers. We encourage potential members to visit us during one of our [events](./events), or [schedule a tour](./contact).
+
+2. **Sign Up:** If you decide that Sequoia Fabrica is the right fit for you, signing up is easy. Complete our [membership application form](./membership_application) and agree to our [community guidelines](./community_guidelines) as well as our [code of conduct](./code_of_conduct).
+
+4. **Start Paying Dues** if applicable. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
+
+5. **Orientation:** All new members go through an orientation session to become familiar with the tools, safety protocols, and community norms of Sequoia Fabrica. We will contact you about scheduling a time. Note that further training may be required for specific machinery.
+
+5. **Become a Part of the Community:** Once you're a member, you will have 24/7 access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), attend and help out with workshops, and be a part of our collaborative environment. Members are encouraged to host events and collaborate with the community. They are expected to help maintain the space.
+
+# Still have Questions?
+Check our [FAQ page](./faq) for answers. If you don't find what you are looking for, please [reach out to us](./contact).
 
 export default function MDXPage({ children }) {
   return <DocumentLayout>{children}</DocumentLayout>;
