Replace tinyletter links with mailchimp links

--- a/src/pages/docs/contact.mdx
+++ b/src/pages/docs/contact.mdx
@@ -7,7 +7,7 @@ Sequoia Fabrica run by members and volunteers. If you need to contact the board 
 
 ## Join our Newsletter
 
-You can follow updates on our organization through the platforms below, or if you want news delivered directly to you on a regular basis, add yourself to <a href={urlConstants.tinyLetter}>our newsletter</a>.
+You can follow updates on our organization through the platforms below, or if you want news delivered directly to you on a regular basis, add yourself to <a href={urlConstants.mailchimp}>our newsletter</a>.
 
 
 ## Follow us on Social Media
