--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -4,7 +4,7 @@ import Callout from '@/src/components/Callout/Callout'
 # Membership at Sequoia Fabrica
 
 <Callout variant='warning'>
-  This page is incomplete and may not reflect the totality of the membership process. We are in the process of defining what membership will look like, and have prepared this document as preview for the sake of transparency. Please join our [mailing list](https://tinyletter.com/sequoiafabrica) to ensure you are updated when membership applications are ready.
+  This page is incomplete and may not reflect the totality of the membership process. We are in the process of defining what membership will look like, and have prepared this document as preview for the sake of transparency. Please join our <a href={urlConstants.mailchimp}>newsletter</a> to ensure you are updated when membership applications are ready.
 </Callout>
 
 # Join Our Community of Innovators and Creators
