add missing import

--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -1,5 +1,6 @@
 import DocumentLayout from '@/src/components/docs/DocumentLayout'
 import Callout from '@/src/components/Callout/Callout'
+import { urlConstants } from '@/src/text/urlConstants';
 
 # Membership at Sequoia Fabrica
 
