--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -8,21 +8,29 @@ import { urlConstants } from '@/src/text/urlConstants';
   This page is incomplete and may not reflect the totality of the membership process. We are in the process of defining what membership will look like, and have prepared this document as preview for the sake of transparency. Please join our <a href={urlConstants.mailchimp}>newsletter</a> to ensure you are updated when membership applications are ready.
 </Callout>
 
-# Join Our Community of Innovators and Creators
-At Sequoia Fabrica, we're not just a makerspace – we're a community. We offer a vibrant environment where creativity meets technology. Our members have access to a wide range of tools and ample space for  building your project.
+# Join Our Community
+
+We're thrilled you're interested in joining our community of creators and makers. 
+
+As a member, you'll have access to tools, equipment, and space to bring your projects to life. But more importantly, you'll be part of a passionate community that thrives on sharing knowledge, exchanging ideas, and working together.
 
 ## Membership Types
-- **Standard Membership:** Our standard membership is open to all and is priced at **$100 per month**. Membership grants you 24/7 access to our facility and its equipment, as well as the opportunity to participate in the decision-making process at organizational meetings. Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with events. Our volunteer-based structure is how we are able to provide such an affordable space.
+- **Standard Membership:** Our standard membership is priced at **$150 per month**. 
 
-- **Sponsored Membership**: Our sponsored membership is identical to the standard membership, and is available for those unable to afford the membership dues. There is no cost. Your type of membership is not public information.
+- **Sponsor Membership:** Our sponsor membership is priced at **$200 per month**. Sponsors  help provide scholarships for those who can not afford classes or full membership dues.
+
+- **Discount Membership:** A discount membership is available on a sliding scale basis of **$100-149 per month** and is intended for students, those on a fixed income, or any who cannot otherwise afford full dues.
+
+We hope to offer more flexible membership terms in the future, provided we can meet our financial and operational needs!
+
+Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with projects or events. Our volunteer-based structure is how we are able to provide an affordable space.
 
 # What Membership Means
-- **Community Contribution:** Sequoia Fabrica thrives on the energy, creativity, and collaboration of its members. We believe that every member contributes to the fabric of our community, whether through sharing skills, participating in events, or volunteering for maintenance and improvements.
 
-- **Learning and Sharing:** More than just access to tools, Sequoia Fabrica is about learning and growing together. We encourage members to engage with each other, exchange knowledge, and collaborate on projects.
-
-- **Active Participation:** As a member, you are more than a user of the space; you are a caretaker of a shared resource and a participant in our collective governance. Your ideas and feedback are vital in shaping the future of Sequoia Fabrica.
-
+- **Full Access:** Members have full access to our workshop and all equipment during open hours. Members are allowed to bring guests!
+-**A Supportive Community:** We believe every member contributes to the spirit of Sequoia Fabrica, whether by collaborating on projects, volunteering, mentoring others, or helping maintain the space. This is a place to connect, create, and grow together.
+-**Learning Opportunities:** Members are encouraged to share skills and knowledge with each other. Through workshops, peer mentoring, Grove projects, and informal collaboration, there are always opportunities to teach and learn from one another.
+-**A Voice**: As a member, you have a say in shaping Sequoia Fabrica. You'll be able to participate in organizational meetings and decision-making. Your feedback and ideas are critical as we continue improving our community.
 
 # Getting Started with Membership
 We've tried to make the process for membership as straightforward and transparent as possible. If you have any questions throughout the process, please [reach out to us](./contact).
