simplify home and about page

--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -2,15 +2,11 @@ import DocumentLayout from '@/src/components/docs/DocumentLayout'
 
 # About Sequoia Fabrica
 
-## Empowering Innovation and Creativity in San Francisco
-
-Welcome to Sequoia Fabrica, a burgeoning community workshop destined to spark innovation, foster creativity, and build a collaborative environment in the heart of San Francisco. As we navigate our journey towards obtaining 501(c)(3) non-profit status, our vision is to establish a hub akin to the [makerspace](https://www.makerspaces.com/what-is-a-makerspace/) and [hackerspace](hackerspaces.org), yet unique in our approach and community impact.
+Welcome to Sequoia Fabrica, an intergenetational community workshop fostering the makers of today and tomorrow in San Francisco. 
 
 ## Why We Do What We Do
 
-In the bustling, tech-savvy city of San Francisco, a paradox exists. Despite being a global epicenter for innovation and technology, many locals find themselves at a crossroads, lacking accessible spaces equipped with the tools and machinery essential for creative and technological experimentation. This is where Sequoia Fabrica steps in.
-
-We recognize the challenge San Franciscans face in accessing expensive, high-quality tools and machinery necessary for bringing their innovative ideas to life. More than just providing equipment, Sequoia Fabrica is committed to fostering a community-driven environment where learning, sharing, and building together is the norm. We believe in breaking down barriers – not just physical or financial, but also those hindering collaborative learning and communal growth.
+To build great things, you need good tools and good community. Sequoia Fabrica offers both! In the tradition of [makerspaces](https://www.makerspaces.com/what-is-a-makerspace/) and [hackerspaces](hackerspaces.org), we offer shared access to expensive, high-quality tools and machinery in an environment where learning, sharing, and building together is the norm. 
 
 Our vision extends beyond facilitating access to tools. We aim to cultivate a space where diverse minds and skills converge, sparking a culture of communal education and creative collaboration. In doing so, we not only empower individual makers but also enrich our broader community, making the spirit of innovation and craft accessible to all.
 
