streamlined about page, mnor cosmetic (color)

--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -8,23 +8,19 @@ Welcome to Sequoia Fabrica, an intergenetational community workshop fostering th
 
 To build great things, you need good tools and good community. Sequoia Fabrica offers both! In the tradition of [makerspaces](https://www.makerspaces.com/what-is-a-makerspace/) and [hackerspaces](hackerspaces.org), we offer shared access to expensive, high-quality tools and machinery in an environment where learning, sharing, and building together is the norm. 
 
-Our vision extends beyond facilitating access to tools. We aim to cultivate a space where diverse minds and skills converge, sparking a culture of communal education and creative collaboration. In doing so, we not only empower individual makers but also enrich our broader community, making the spirit of innovation and craft accessible to all.
-
-## Our Mission
-
-At Sequoia Fabrica, we believe in the transformative power of access to tools and technology. Our mission is to democratize the ability to create, innovate, and explore artistic and scientific realms including but not limited to: Electronics, Robotics, Sewing and Woodcraft. We are dedicated to building a space where ideas flourish, skills are honed, and a community of makers, learners, and innovators can engage with one another regardless of background or status.
+We believe in the transformative power of access to tools and technology. Our mission is to democratize the ability to create, innovate, and explore artistic and scientific realms including but not limited to: Electronics, Robotics, Sewing and Woodcrafts. 
 
 ## Inclusive and Accessible
 
-Situated in the vibrant city of San Francisco, Sequoia Fabrica is more than just a space; it's a movement towards inclusivity in the world of technology and craftsmanship. Our doors are open 24/7 to our members, and we frequently welcome the broader community to join in [events and workshops](./events). True to our core belief that financial constraints should not be a barrier to innovation, we offer flexible membership options ensuring that nobody is turned away due to financial inability.
+Sequoia Fabrica strives to be a force for inclusivity in the world of technology and craftsmanship. Our doors are open 24/7 to our members, and we frequently welcome the broader community to join in [events and workshops](./events). True to our core belief that financial constraints should not be a barrier to innovation, we offer flexible membership options ensuring that nobody is turned away for lack of funds.
 
 ## Our Founding Team
 
-Sequoia Fabrica is brought to life by a group of passionate founding members, each an expert in their domain. From the intricate circuits of electronics to the artful precision of woodcraft, our team is dedicated to imparting their knowledge through classes and workshops. They are not just instructors but mentors, committed to guiding every member on their journey of discovery and creation.
+Sequoia Fabrica is brought to life by a group of passionate founding members, each an expert in their domain - sewing, electronics, robotics, wood crafts and fine arts. They each maintain an area of the workshop, teach workshops and onboard new community members.
 
 ## Join Our Community
 
-As we embark on this exciting journey, we invite you to be a part of Sequoia Fabrica. Whether you're a seasoned maker, a curious beginner, or someone who believes in the power of community and creativity, there's a place for you here. We're always searching for volunteers to help maintain the space, run classes, and be an overall good community member. Join us in creating a space where knowledge and equipment is accessible, learning is continuous, and creativity knows no bounds.
+As we embark on this exciting journey, we invite you to be a part of Sequoia Fabrica. Whether you're a seasoned maker, a curious beginner, or someone who believes in the power of community and creativity, there's a place for you here. We're always searching for volunteers to help maintain the space, run classes, and be an overall good community member. 
 
 ## Still Have Questions?
 
