--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -12,7 +12,7 @@ We believe in the transformative power of access to tools and technology. Our mi
 
 ## Inclusive and Accessible
 
-Sequoia Fabrica strives to be a force for inclusivity in the world of technology and craftsmanship. Our doors are open 24/7 to our members, and we frequently welcome the broader community to join in [events and workshops](./events). True to our core belief that financial constraints should not be a barrier to innovation, we offer flexible membership options ensuring that nobody is turned away for lack of funds.
+Sequoia Fabrica strives to be a force for inclusivity in the world of technology and craftsmanship. Our doors are open 24/7 to our members, and we frequently welcome the broader community to join in [events and workshops](./events). We are working on securing grants to ensure that nobody is turned away for lack of funds.
 
 ## Our Founding Team
 
