clarifying wording in CoC

--- a/src/pages/docs/code_of_conduct.mdx
+++ b/src/pages/docs/code_of_conduct.mdx
@@ -25,15 +25,14 @@ The Sequoia Fabrica (SF) community is dedicated to providing a harassment-free e
 - Harassing photography or recording, including logging online activity for harassment purposes
 - Spamming, denial of service attacks, hacking of personal devices or accounts without consent
 
-### The Sequoia Fabrica will not act on:
+### Sequoia Fabrica will not act on complaints regarding:
 
 - Reasonable communication of personal boundaries
 - Necessary measures to protect our community from serious, deliberate harm
-- Attempts to troll or undermine the code of conduct process
 
 ### Reporting 
 
-If you experience or witness harassment, reach out to sequoiafabrica@gmail.com. If you are in immediate danger, do not hesitate to enlist the help of those around you or call 911.
+If you experience or witness harassment, reach out to sequoiafabrica@gmail.com. If you are in immediate danger, do not hesitate to enlist the help of those around you, or, if necessary, call 911.
 
 ## Workshop Policies
 
@@ -52,7 +51,7 @@ Contact the Board with any questions or concerns in person or at [sequoiafabrica
 
 This code of conduct draws from [Double Union](https://doubleunion.org/policies/#code-of-conduct), [Recurse Center](https://www.recurse.com/code-of-conduct), and [Hackers On Planet Earth](https://hope.net/codeofconduct.html). It is licensed under CC0, attribution is not required.
 
-Last updated: Jan 5, 2024
+Last updated: Jan 25, 2024
 
 export default function MDXPage({ children }) {
   return <DocumentLayout>{children}</DocumentLayout>;
