Adding Membership form, wiki, fixing some broken links.

--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -6,7 +6,7 @@ Welcome to Sequoia Fabrica, an intergenetational community workshop fostering th
 
 ## Why We Do What We Do
 
-To build great things, you need good tools and good community. Sequoia Fabrica offers both! In the tradition of [makerspaces](https://www.makerspaces.com/what-is-a-makerspace/) and [hackerspaces](hackerspaces.org), we offer shared access to expensive, high-quality tools and machinery in an environment where learning, sharing, and building together is the norm. 
+To build great things, you need good tools and good community. Sequoia Fabrica offers both! In the tradition of [makerspaces](https://www.makerspaces.com/what-is-a-makerspace/) and [hackerspaces](https://hackerspaces.org), we offer shared access to expensive, high-quality tools and machinery in an environment where learning, sharing, and building together is the norm. 
 
 We believe in the transformative power of access to tools and technology. Our mission is to democratize the ability to create, innovate, and explore artistic and scientific realms including but not limited to: Electronics, Robotics, Sewing and Woodcrafts. 
 
