--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -15,9 +15,9 @@ We're thrilled you're interested in joining our community of creators and makers
 As a member, you'll have access to tools, equipment, and space to bring your projects to life. But more importantly, you'll be part of a passionate community that thrives on sharing knowledge, exchanging ideas, and working together.
 
 ## Membership Types
-- **Standard Membership:** Our standard membership is priced at **$150 per month**. 
 - **Sponsor Membership:** Our sponsor membership is priced at **$200 per month**. Sponsors  help provide scholarships for those who can not afford classes or full membership dues.
-- **Discount Membership:** A discount membership is available on a sliding scale basis of **$100-149 per month** and is intended for students, those on a fixed income, or any who cannot otherwise afford full dues.
+- **Standard Membership:** Our standard membership is priced at **$150 per month**. 
+- **Sliding Scale Membership:** A discount membership is available on a sliding scale basis of **$100-149 per month** and is intended for any who cannot otherwise afford full dues. No pre-qualification. Choose this option if you need it!
 
 We hope to offer more flexible membership terms in the future, provided we can meet our financial and operational needs!
 
@@ -35,7 +35,7 @@ We've tried to make the process for membership as straightforward and transparen
 
 1. **Visit Us:** Get a feel for the space and meet fellow makers. We encourage potential members to visit us during one of our [events](./events), or [schedule a tour](./contact).
 
-2. **Sign Up:** If you decide that Sequoia Fabrica is the right fit for you, signing up is easy. Complete our [membership application form](./membership_application) and agree to our [community guidelines](./community_guidelines) as well as our [code of conduct](./code_of_conduct).
+2. **Sign Up:** If you decide that Sequoia Fabrica is the right fit for you, signing up is easy. Complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our [community guidelines](https://wiki.sequoiafabrica.org/wiki/Workshop_Norms) as well as our [code of conduct](./code_of_conduct).
 
 4. **Start Paying Dues** if applicable. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
 
