--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -15,7 +15,7 @@ If you’d like access to the space or to use our equipment at other times, you 
 
 ## **Are you a 501(c)(3)?**
 
-We are a California Public Benefit Corporation and have applied for 501(c)(3) status with the IRS. Our application is pending. [Read more here](https://www.irs.gov/charities-non-profits/charitable-organizations/contributions-to-organization-with-irs-application-pending). 
+We are a California Public Benefit Corporation and have applied for 501(c)(3) status with the IRS. Our application is pending. Our EIN is 93-4496044. [Read more here](https://www.irs.gov/charities-non-profits/charitable-organizations/contributions-to-organization-with-irs-application-pending). 
 
 ## Why are you starting another space?
 
