web site clean-up

--- a/src/pages/docs/code_of_conduct.mdx
+++ b/src/pages/docs/code_of_conduct.mdx
@@ -25,14 +25,14 @@ The Sequoia Fabrica (SF) community is dedicated to providing a harassment-free e
 - Harassing photography or recording, including logging online activity for harassment purposes
 - Spamming, denial of service attacks, hacking of personal devices or accounts without consent
 
+### Reporting 
+
+If you experience or witness harassment, reach out to sequoiafabrica@gmail.com. If you are in immediate danger, do not hesitate to enlist the help of those around you, or, if necessary, call 911.
+
 ### Sequoia Fabrica will not act on complaints regarding:
 
 - Reasonable communication of personal boundaries
 - Necessary measures to protect our community from serious, deliberate harm
-
-### Reporting 
-
-If you experience or witness harassment, reach out to sequoiafabrica@gmail.com. If you are in immediate danger, do not hesitate to enlist the help of those around you, or, if necessary, call 911.
 
 ## Workshop Policies
 
@@ -43,7 +43,7 @@ If you experience or witness harassment, reach out to sequoiafabrica@gmail.com. 
 
 ## Enforcement
 
-Members are empowered to ask anyone violating this code of conduct to cease the behavior and/or leave the space immediately. Further sanctions may be applied at the discretion of the Board.
+Members and visitors are empowered to ask anyone violating this code of conduct to cease the behavior and/or leave the space immediately. Further sanctions may be applied at the discretion of the Board.
 
 The Board may take any action they deem appropriate, including warning an offender, suspension of membership, temporary or permanent expulsion from Sequoia Fabrica spaces and events without refund or notice. 
 
