--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -5,7 +5,9 @@ import DocumentLayout from '@/src/components/docs/DocumentLayout'
 
 ## Where are you located?
 
-We're located at 1736 18th Street in San Francisco’s Potrero Hill neighborhood. We will gradually begin public programming at this location in late February.
+We're located at 1736 18th Street in San Francisco’s Potrero Hill neighborhood. We will gradually begin public programming at this location in late February 2024.
+
+We're convienently located near several major bus lines  (19, 22, 55), a bike lane (on 17th Street), and there is street parking in the neighborhood.
 
 ## How can I access the space?
 
@@ -13,9 +15,11 @@ We will be open to the general public for regular, hosted events and workshops. 
  
 If you’d like access to the space or to use our equipment at other times, you must [become a member](./membership)!
 
+If our model does not meet your needs, there are many [makerspaces in the Bay Area](https://makernexuswiki.com/wiki/Maker_Spaces_In_San_Francisco_area) and [around the world](https://wiki.hackerspaces.org/List_of_Hacker_Spaces).
+
 ## **Are you a 501(c)(3)?**
 
-We are a California Public Benefit Corporation and have applied for 501(c)(3) status with the IRS. Our application is pending. Our EIN is 93-4496044. [Read more here](https://www.irs.gov/charities-non-profits/charitable-organizations/contributions-to-organization-with-irs-application-pending). 
+We are a volunteer run California Public Benefit Corporation and have applied for 501(c)(3) status with the IRS. Our application is pending. Our EIN is 93-4496044. [Read more here](https://www.irs.gov/charities-non-profits/charitable-organizations/contributions-to-organization-with-irs-application-pending). 
 
 ## Why are you starting another space?
 
@@ -41,11 +45,13 @@ Please review our [membership page](./membership) for more information!
 
 We’re aiming for standard monthly dues similar to other Bay Area workshops, $100-150 a month. 
 
+We would like to offer more flexible dues in the future, provided we can find funding and meet expenses. 
+
 ## Can I bring my kids?
 
 Yes! Children are allowed in the workshop with adult supervision. 
 
-We plan to offer workshops specifically for children and families in the coming months.
+We will offer workshops specifically for children and families in the coming months.
 
 ## Do you accept in kind donations?
 
