--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -65,6 +65,14 @@ If this applies to you, please [get in touch](./contact).
 
 A Grove is the term we use to describe smaller groups of maintainers and organizers within Sequoia Fabrica. Individuals will join a Grove that relates to their interests and the tools they use, such as electronics, robotics, sewing, or woodcraft. If it does not yet exist, they can lobby the community to start a new Grove. 
 
+## Why did you choose the name Sequoia Fabrica?
+
+Sequoia refers to the iconic California redwood tree. These trees grow from a tiny seed and are among the largest and oldest living organisms on Earth. We hope from our modest beginnings to create a community that lasts and thrives.  
+
+Fabrica comes from the Latin word meaning "workshop" or "factory." It also evokes fabric, fibers woven together to form a whole. Our workshop is a place where people come together across disciplines to build, learn, create, and make things with hands and machines. 
+
+Conveniently, our initials are also S.F.
+
 export default function MDXPage({ children }) {
   return <DocumentLayout>{children}</DocumentLayout>;
 }
