--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -5,7 +5,7 @@ import { urlConstants } from '@/src/text/urlConstants';
 # Membership at Sequoia Fabrica
 
 <Callout variant='warning'>
-  This page is incomplete and may not reflect the totality of the membership process. We are in the process of defining what membership will look like, and have prepared this document as preview for the sake of transparency. Please join our <a href={urlConstants.mailchimp}>newsletter</a> to ensure you are updated when membership applications are ready.
+  We have opened [membership applications](https://forms.gle/r3AytzzxeKX7NUaM8). 
 </Callout>
 
 # Join Our Community
@@ -15,11 +15,11 @@ We're thrilled you're interested in joining our community of creators and makers
 As a member, you'll have access to tools, equipment, and space to bring your projects to life. But more importantly, you'll be part of a passionate community that thrives on sharing knowledge, exchanging ideas, and working together.
 
 ## Membership Types
-- **Sponsor Membership:** Our sponsor membership is priced at **$200 per month**. Sponsors  help provide scholarships for those who can not afford classes or full membership dues.
-- **Standard Membership:** Our standard membership is priced at **$150 per month**. 
-- **Sliding Scale Membership:** A discount membership is available on a sliding scale basis of **$100-149 per month** and is intended for any who cannot otherwise afford full dues. No pre-qualification. Choose this option if you need it!
+- **Sponsor Membership:** Our sponsor membership is priced at **$200 per month**. Sponsors help provide scholarships for those who can not afford classes or full membership dues.
+- **Standard Membership:** Our standard membership is priced at **$150 per month**. Covers the full costs of running a community workshop in San Francisco.
+- **Sliding Scale Membership:** Membership is available on a sliding scale basis of **$100-149 per month** and is intended for any who cannot otherwise afford full dues. No pre-qualification. Choose this option if you need it!
 
-We hope to offer more flexible membership terms in the future, provided we can meet our financial and operational needs!
+We hope to offer more flexible membership terms in the future, provided we can find a funding source and meet our core expenses!
 
 Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with projects or events. Our volunteer-based structure is how we are able to provide an affordable space.
 
@@ -41,7 +41,7 @@ We've tried to make the process for membership as straightforward and transparen
 
 5. **Orientation:** All new members go through an orientation session to become familiar with the tools, safety protocols, and community norms of Sequoia Fabrica. We will contact you about scheduling a time. Note that further training may be required for specific machinery.
 
-5. **Become a Part of the Community:** Once you're a member, you will have 24/7 access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), attend and help out with workshops, and be a part of our collaborative environment. Members are encouraged to host events and collaborate with the community. They are expected to help maintain the space.
+5. **Become a Part of the Community:** Once you're a member, you will have access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), attend and help out with workshops, and be a part of our collaborative environment. Members are encouraged to host events and collaborate with the community. They are expected to help maintain the space.
 
 # Still have Questions?
 Check our [FAQ page](./faq) for answers. If you don't find what you are looking for, please [reach out to us](./contact).
