--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -10,7 +10,7 @@ import { urlConstants } from '@/src/text/urlConstants';
 
 # Join Our Community
 
-We're thrilled you're interested in joining our community of creators and makers. 
+We're thrilled you're interested in joining our community of artists, creators, and makers. 
 
 As a member, you'll have access to tools, equipment, and space to bring your projects to life. But more importantly, you'll be part of a passionate community that thrives on sharing knowledge, exchanging ideas, and working together.
 
@@ -19,7 +19,7 @@ As a member, you'll have access to tools, equipment, and space to bring your pro
 - **Standard Membership:** Our standard membership is priced at **$150 per month**. Covers the full costs of running a community workshop in San Francisco.
 - **Sliding Scale Membership:** Membership is available on a sliding scale basis of **$100-149 per month** and is intended for any who cannot otherwise afford full dues. No pre-qualification. Choose this option if you need it!
 
-We hope to offer more flexible membership terms in the future, provided we can find a funding source and meet our core expenses!
+We are 100% volunteer run and grassroots funded. We do not currently have the ability to self-fund lower membership rates than those above. Our goal is to offer more flexible terms in the future, provided we can find funding and meet our monthly expenses. There are ways beyond membership to engage with Sequoia Fabrica, including classes, hosted workshop hours, and visiting as a guest of a member!
 
 Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with projects or events. Our volunteer-based structure is how we are able to provide an affordable space.
 
