Partnership page, general updates

--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -16,7 +16,7 @@ Sequoia Fabrica strives to be a force for inclusivity in the world of technology
 
 ## Our Founding Team
 
-Sequoia Fabrica is brought to life by a group of founding members passionate about sewing, electronics, robotics, wood crafts, and fine arts. They maintain areas of the workshop, teach workshops, and onboard new community members.
+Sequoia Fabrica is brought to life by a group of founding members passionate about sewing, electronics, wood crafts, and fine arts. They maintain areas of the workshop, teach workshops, and onboard new community members.
 
 ## Join Our Community
 
