--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -5,13 +5,13 @@ import DocumentLayout from '@/src/components/docs/DocumentLayout'
 
 ## Where are you located?
 
-We're located at 1736 18th Street in San Francisco’s Potrero Hill neighborhood. We will gradually begin public programming at this location in late February 2024.
+We're located at 1736 18th Street in San Francisco’s Potrero Hill neighborhood. 
 
-We're convienently located near several major bus lines  (19, 22, 55), a bike lane (on 17th Street), and there is street parking in the neighborhood.
+We're convienently near several major bus lines  (19, 22, 55), a bike lane (on 17th Street), and there is street parking in the neighborhood.
 
 ## How can I access the space?
 
-We will be open to the general public for regular, hosted events and workshops. Anyone is welcome to sign up and attend these! 
+We are open to the general public for regular, hosted events and workshops. Anyone is welcome to sign up and attend these! 
  
 If you’d like access to the space or to use our equipment at other times, you must [become a member](./membership)!
 
@@ -43,15 +43,15 @@ Please review our [membership page](./membership) for more information!
 
 ## How much will membership cost?
 
-We’re aiming for standard monthly dues similar to other Bay Area workshops, $100-150 a month. 
+Our monthly dues are similar to other Bay Area workshops, $100-150 a month.
 
-We would like to offer more flexible dues in the future, provided we can find funding and meet expenses. 
+We would like to offer more flexible dues in the future, provided we can find a funding source and meet our expenses. 
 
 ## Can I bring my kids?
 
 Yes! Children are allowed in the workshop with adult supervision. 
 
-We will offer workshops specifically for children and families in the coming months.
+We have some events and classes specifically for children and families!
 
 ## Do you accept in kind donations?
 
@@ -69,9 +69,9 @@ A Grove is the term we use to describe smaller groups of maintainers and organiz
 
 Sequoia refers to the iconic California redwood tree. These trees grow from a tiny seed and are among the largest and oldest living organisms on Earth. We hope from our modest beginnings to create a community that lasts and thrives.  
 
-Fabrica comes from the Latin word meaning "workshop" or "factory." It also evokes fabric, fibers woven together to form a whole. Our workshop is a place where people come together across disciplines to build, learn, create, and make things with hands and machines. 
+Fabrica comes from the Latin word meaning workshop or factory. It also evokes fabric, fibers woven together to form a whole. Our workshop is a place where people come together across disciplines to build, learn, create, and make things with hands and machines. 
 
-Conveniently, our initials are also S.F.
+Conveniently, our initials are S.F.
 
 export default function MDXPage({ children }) {
   return <DocumentLayout>{children}</DocumentLayout>;
