--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -18,6 +18,7 @@ As a member, you'll have access to tools, equipment, and space to bring your pro
 - **Sponsor Membership:** Our sponsor membership is priced at **$200 per month**. Sponsors help provide scholarships for those who can not afford classes or full membership dues.
 - **Standard Membership:** Our standard membership is priced at **$150 per month**. Covers the full costs of running a community workshop in San Francisco.
 - **Sliding Scale Membership:** Membership is available on a sliding scale basis of **$100-149 per month** and is intended for any who cannot otherwise afford full dues. No pre-qualification. Choose this option if you need it!
+- **Family Membership:**  **$200 per month** Provides membership for two adults in a household (supervised children are welcome at Sequoia Fabrica too)!
 
 We are 100% volunteer run and grassroots funded. We do not currently have the ability to self-fund lower membership rates than those above. Our goal is to offer more flexible terms in the future, provided we can find funding and meet our monthly expenses. There are ways beyond membership to engage with Sequoia Fabrica, including classes, hosted workshop hours, and visiting as a guest of a member!
 
