--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -49,13 +49,17 @@ We would like to offer more flexible dues in the future, provided we can find a 
 
 ## Can I bring my kids?
 
-Yes! Children are allowed in the workshop with adult supervision. 
+Yes! Children are allowed in the workshop with supervision of a parent or caregiver. 
 
 We have some events and classes specifically for children and families!
 
+## Can I bring my pet?
+
+At this time the workshop is not setup for pets, but we hope to offer some pet focused crafts and workshops in the future!
+
 ## Do you accept in kind donations?
 
-By prior arrangement. Please email us at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com) with what you’d like to donate.
+By prior arrangement. Please email us at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com) with what you'd like to donate. We maintain a [list](https://wiki.sequoiafabrica.org/wiki/Equipment_Needs) of equipment we're looking for!
 
 ## Can I take a class at Sequoia Fabrica if I can't afford the workshop fees?
 
