general site updates, spelling and grammar

--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -17,6 +17,31 @@ If you’d like access to the space or to use our equipment at other times, you 
 
 If our model does not meet your needs, there are many [makerspaces in the Bay Area](https://makernexuswiki.com/wiki/Maker_Spaces_In_San_Francisco_area) and [around the world](https://wiki.hackerspaces.org/List_of_Hacker_Spaces).
 
+## What tools do you have?
+
+As of 3/2024 our tools include:
+
+Textiles:
+* Domestic sewing machines
+* Embroidery machine
+* Knitting machines
+* Industrial serger
+* Industrial straight stitch sewing machine
+* Industrial walking foot sewing machine
+
+Woodworking:
+* Makita cordless track saw
+* DeWalt cordless power tools
+* Dremel cordless rotary tool
+* Assorted screwdrivers, hammers, clamps, etc
+
+Digital Fabrication:
+* 2x Prusa MK3S 3d printers
+* XTool 55W CO2 laser 
+* Maslow CNC
+
+For a full list [see our wiki](https://wiki.sequoiafabrica.org/wiki/Main_Page).
+
 ## **Are you a 501(c)(3)?**
 
 We are a volunteer run California Public Benefit Corporation and have applied for 501(c)(3) status with the IRS. Our application is pending. Our EIN is 93-4496044. [Read more here](https://www.irs.gov/charities-non-profits/charitable-organizations/contributions-to-organization-with-irs-application-pending). 
@@ -41,7 +66,7 @@ We ask that Members join a Grove and contribute to the upkeep of our shared spac
 
 Please review our [membership page](./membership) for more information!
 
-## How much will membership cost?
+## How much does membership cost?
 
 Our monthly dues are similar to other Bay Area workshops, $100-150 a month.
 
