--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -2,17 +2,17 @@ import DocumentLayout from '@/src/components/docs/DocumentLayout'
 
 # About Sequoia Fabrica
 
-Welcome to Sequoia Fabrica, an intergenetational community workshop fostering the makers of today and tomorrow in San Francisco. 
+Welcome to Sequoia Fabrica, an intergenerational community workshop fostering the makers of today and tomorrow in San Francisco. 
 
 ## Why We Do What We Do
 
-To build great things, you need good tools and good community. Sequoia Fabrica offers both! In the tradition of [makerspaces](https://www.makerspaces.com/what-is-a-makerspace/) and [hackerspaces](https://hackerspaces.org), we offer shared access to high-quality tools and machinery in an environment where learning, sharing, and building together is the norm. 
+To build great things, you need good [tools](https://wiki.sequoiafabrica.org/wiki/Main_Page) and good community. Sequoia Fabrica offers both! In the tradition of [makerspaces](https://www.makerspaces.com/what-is-a-makerspace/) and [hackerspaces](https://hackerspaces.org), we offer shared access to high-quality tools and machinery in an environment where learning, sharing, and building together is the norm. 
 
 We believe in the transformative power of access to tools and technology. Our mission is to democratize the ability to create, innovate, and explore artistic and scientific realms including but not limited to: Fine Arts, Electronics, Sewing and Woodcrafts. 
 
 ## Inclusive and Accessible
 
-Sequoia Fabrica strives to be a force for inclusivity in the world of technology and craftsmanship. Our doors are open to our members, and we engage with the broader community through [events and workshops](./events). We are working on securing grants to ensure that nobody is turned away for lack of funds.
+Sequoia Fabrica strives to be a force for inclusivity in the world of art, technology, and craftsmanship. Our doors are open to our members, and we engage with the broader community through [events and workshops](./events). We are working on securing grants to ensure that nobody is turned away for lack of funds.
 
 ## Our Founding Team
 
