--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -44,7 +44,11 @@ For a full list [see our wiki](https://wiki.sequoiafabrica.org/wiki/Main_Page).
 
 ## **Are you a 501(c)(3)?**
 
-We are a volunteer run California Public Benefit Corporation and have applied for 501(c)(3) status with the IRS. Our application is pending. Our EIN is 93-4496044. [Read more here](https://www.irs.gov/charities-non-profits/charitable-organizations/contributions-to-organization-with-irs-application-pending). 
+Yes. The IRS has determined we are a public charity under IRC Section 501(c)(3). Donations are tax-deductable for federal purposes. 
+
+You can [view our final determination letter here](https://static.miraheze.org/sequoiafabricawiki/8/86/FinalLetter_93-4496044_SEQUOIAFABRICA_01132024_00.pdf).  
+
+EIN: 93-4496044
 
 ## Why are you starting another space?
 
