Point links to new events platform.

--- a/src/pages/docs/contact.mdx
+++ b/src/pages/docs/contact.mdx
@@ -14,7 +14,7 @@ You can follow updates on our organization through the platforms below, or if yo
 
 - [Instagram](https://www.instagram.com/sequoia.fabrica/)
 - [Mastodon](https://sfba.social/@sequoiafabrica)
-- [Meetup](https://www.meetup.com/sequoia-fabrica-community-workshop-and-classes/)
+- [Events](https://bookwhen.com/sequoiafabrica)
 
 
 ## Donate
