# Calendar Feature - Adds a calendar to the homepage - On medium and large devices, it defaults to a month view, with the option to toggle to a week view - On small devices, it defaults to a week view - items link to their bookWhen page - updates links to bookWhen, and some other random urls that should be using a url constant for easy updating

--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -34,8 +34,8 @@ Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintai
 We've tried to make the process for membership as straightforward and transparent as possible. If you have any questions throughout the process, please [reach out to us](./contact).
 
 1. **Visit Us:** Get a feel for the space and meet fellow makers. We encourage potential members to visit us during one of our [events](./events), or [schedule a tour](./contact).
-
-2. **Sign Up:** If you decide that Sequoia Fabrica is the right fit for you, signing up is easy. Complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our [community guidelines](https://wiki.sequoiafabrica.org/wiki/Workshop_Norms) as well as our [code of conduct](./code_of_conduct).
+u
+2. **Sign Up:** If you decide that Sequoia Fabrica is the right fit for you, signing up is easy. Complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our <a href={urlConstants.wiki+"/Workshop_Norms"}>community guidelines</a> as well as our [code of conduct](./code_of_conduct).
 
 4. **Start Paying Dues** if applicable. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
 
