--- a/src/pages/docs/contact.mdx
+++ b/src/pages/docs/contact.mdx
@@ -12,14 +12,14 @@ You can follow updates on our organization through the platforms below, or if yo
 
 ## Follow us on Social Media
 
-- [Instagram](https://www.instagram.com/sequoia.fabrica/)
-- [Mastodon](https://sfba.social/@sequoiafabrica)
-- [Meetup](https://www.meetup.com/sequoia-fabrica-community-workshop-and-classes/)
+- <a href={urlConstants.instagram}>Instagram</a>
+- <a href={urlConstants.mastodon}>Mastodon</a>
+- <a href={urlConstants.bookWhen}>Bookwhen</a> (Our events platform)
 
 
 ## Donate
 
-- [Open Collective](https://opencollective.com/sequoia-fabrica)
+- <a href={urlConstants.openCollective}>Open Collective</a>
 
 
 export default function MDXPage({ children }) {
