--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -4,10 +4,6 @@ import { urlConstants } from '@/src/text/urlConstants';
 
 # Membership at Sequoia Fabrica
 
-<Callout variant='warning'>
-  We have opened [membership applications](https://forms.gle/r3AytzzxeKX7NUaM8). 
-</Callout>
-
 # Join Our Community
 
 We're thrilled you're interested in joining our community of artists, creators, and makers. 
@@ -18,9 +14,8 @@ As a member, you'll have access to tools, equipment, and space to bring your pro
 - **Sponsor Membership:** Our sponsor membership is priced at **$200 per month**. Sponsors help provide scholarships for those who can not afford classes or full membership dues.
 - **Standard Membership:** Our standard membership is priced at **$150 per month**. Covers the full costs of running a community workshop in San Francisco.
 - **Sliding Scale Membership:** Membership is available on a sliding scale basis of **$100-149 per month** and is intended for any who cannot otherwise afford full dues. No pre-qualification. Choose this option if you need it!
-- **Family Membership:**  **$200 per month** Provides membership for two adults in a household (supervised children are welcome at Sequoia Fabrica too)!
 
-We are 100% volunteer run and grassroots funded. We do not currently have the ability to self-fund lower membership rates than those above. Our goal is to offer more flexible terms in the future, provided we can find funding and meet our monthly expenses. There are ways beyond membership to engage with Sequoia Fabrica, including classes, hosted workshop hours, and visiting as a guest of a member!
+We do not currently have the ability to self-fund lower membership rates than those above. We'd love to offer more flexible terms if we can find funding and meet our monthly expenses. 
 
 Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with projects or events. Our volunteer-based structure is how we are able to provide an affordable space.
 
@@ -32,11 +27,11 @@ Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintai
 - **A Voice**: As a member, you have a say in shaping Sequoia Fabrica. You'll be able to participate in organizational meetings and decision-making. Your feedback and ideas are critical as we continue improving our community.
 
 # Getting Started with Membership
-We've tried to make the process for membership as straightforward and transparent as possible. If you have any questions throughout the process, please [reach out to us](./contact).
+We've tried to make the process for membership as straightforward as possible. If you have any questions throughout the process, please [reach out to us](./contact).
 
-1. **Visit Us:** Get a feel for the space and meet fellow makers. We encourage potential members to visit us during one of our [events](./events), or [schedule a tour](./contact).
-u
-2. **Sign Up:** If you decide that Sequoia Fabrica is the right fit for you, signing up is easy. Complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our <a href={urlConstants.wiki+"/Workshop_Norms"}>community guidelines</a> as well as our [code of conduct](./code_of_conduct).
+1. **Visit Us:** Get a feel for the space and meet our community. We encourage potential members to visit us during one of our [events](./events) or to volunteer with us, and then [schedule a tour](./contact).
+
+2. **Sign Up:** If you decide that Sequoia Fabrica is the right fit for you, complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our <a href={urlConstants.wiki+"/Workshop_Norms"}>community guidelines</a> as well as our [code of conduct](./code_of_conduct).
 
 4. **Start Paying Dues** if applicable. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
 
